--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,7 @@ components in the same place.
 
 body {
   margin: 0;
-  background-image: linear-gradient(to right, #2193b0, #6dd5ed);
-  padding: 20px;
+  background-color: rgb(39, 35, 41);
   font-family: 'Karla', sans-serif;
 }
 
@@ -58,11 +57,13 @@ main {
 
 .die-face {
   background-position: center;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 40px 40px;
   width: 50px;
   max-height: 50px;
   aspect-ratio: 1/1;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   display: flex;
   justify-content: center;
