--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://cdn.jsdelivr.net/npm/modern-css-reset/dist/reset.min.css');
+
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  background-color: #F5F5F5;
+  background-image: url('./assets/images/blob-scene-haikei.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
