--- a/src/views/MainMenu/MainMenu.css
+++ b/src/views/MainMenu/MainMenu.css
@@ -33,7 +33,8 @@
     border: 0;
     color: white;
     font-size: 2rem;
-    font-weight: 900;
+    font-weight: 700;
+    letter-spacing: 1px;
     cursor: pointer;
 }
 
