--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,10 @@ body {
   background-image: url('./assets/images/blob-scene-haikei.svg');
   background-size: cover;
   background-repeat: no-repeat;
+  padding: 0 10px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
